--- a/.env.sample
+++ b/.env.sample
@@ -1,4 +1,7 @@
 PORT=5000
 MONGO_URL=mongodb://127.0.0.1:27017/grow_nature
 JWT_SECRET=thisismysecretkey
+PAYFAST_MERCHANT_ID=00000
+PAYFAST_MERCHANT_NAME=Grow Nature
+PAYFAST_SECURED_KEY=secure_key
 NODE_ENV=development
